# python-scripts

./: .gitignore  FizzBuzz.py  LICENSE  MANIFEST.in  PrintMonths.py  README.md  SuperBowlNumbers.py  aes_cipher.py  article_fetcher.py  basic_logging.py  binary_search.py  bingo_caller.py  bingo_card.py  breath.py  breathe.py  case.py  cipher.py  clipboard_history.py  clock.py  coffee_repo_archive.py  coffee_repo_master.py  coin_flip.py  collatz_conjecture.py  correct_mistakes.py  crawl.py  csv_to_json.py  db_template.py  default_pw_generator.py  delta_date.py  demo_abc.py  demo_singledispatch.py  dev_utils.py  distinct_file_finder.py  divisors.py  dug_dice.py  execution_time.py  external_ip.py  fake_text.py  fantasy_keepers.py  fibonacci.py  (+40 more)
ad/: account_expiration.py
baseball/: batter.py  pitcher.py
cb_scripts/: action_verb.py  arrange_files.py  biggest_file.py  bored.py  breathe.py  bst.py  case.py  circles.py  clipboard_history.py  clone-github.py  date_info.py  delta_date.py  dev_utils.py  dict_utils.py  envvars.py  external_ip.py  fake_names_addresses.py  fantasy_keepers.py  fantasy_matchup_week.py  find_files.py  five_oclock_whistle.py  flatten.py  game_on.py  home_dir.py  hour_chime.py  html_decorators.py  html_download.py  indenter.py  inquisitor.py  internet_test.py  isogram.py  isomorphic.py  itertools_recipes.py  latest_python_FTP_version.py  latest_python_download.py  leap_year.py  list_modules.py  location.py  lock_screen.py  lyrics.py  (+48 more)
cipher/: aes_cipher.py  reckon.py  rotational_cipher.py
demo/: async_hello_world.py  asyncio_demo.py  car.py  (+2 more)
(+64 files in other folders)
